add deployment apis
