# rock-platform/rock/docs/swagger.json
@@ -881,7 +881,7 @@
                     {
                         "type": "integer",
                         "default": 10,
-                        "description": "App number page size ",
+                        "description": "Instance number page size ",
                         "name": "page_size",
                         "in": "query",
                         "required": true
@@ -891,10 +891,7 @@
                     "200": {
                         "description": "StatusOK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/v1.PaginationInstanceResp"
-                            }
+                            "$ref": "#/definitions/v1.PaginationInstanceResp"
                         }
                     },
                     "400": {
@@ -1797,6 +1794,214 @@
                         "description": "StatusOK",
                         "schema": {
                             "$ref": "#/definitions/v1.ClusterNodeResp"
+                        }
+                    },
+                    "400": {
+                        "description": "StatusBadRequest",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "StatusNotFound",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "StatusInternalServerError",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/deployment": {
+            "get": {
+                "description": "Api for get all deployments",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DEPLOYMENT"
+                ],
+                "summary": "Get all deployments",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Request page number",
+                        "name": "page_num",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Deployment number page size ",
+                        "name": "page_size",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "StatusOK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.PaginationDeploymentResp"
+                        }
+                    },
+                    "400": {
+                        "description": "StatusBadRequest",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "StatusInternalServerError",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/deployment/{id}": {
+            "get": {
+                "description": "Api for get deployment by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DEPLOYMENT"
+                ],
+                "summary": "Get deployment by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Deployment Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "StatusOK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.DeploymentDetailResp"
+                        }
+                    },
+                    "400": {
+                        "description": "StatusBadRequest",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "StatusNotFound",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "StatusInternalServerError",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Api for update deployment info",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DEPLOYMENT"
+                ],
+                "summary": "Update deployment info and body",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Deployment Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "JSON type for update deployment info",
+                        "name": "update_body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.UpdateDeploymentReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "StatusNoContent",
+                        "schema": {
+                            "$ref": "#/definitions/v1.DeploymentDetailResp"
+                        }
+                    },
+                    "400": {
+                        "description": "StatusBadRequest",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "StatusNotFound",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "StatusInternalServerError",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Api for delete deployment by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DEPLOYMENT"
+                ],
+                "summary": "Delete deployment by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Deployment Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "StatusNoContent",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -5327,6 +5532,40 @@
                 }
             }
         },
+        "v1.PaginationDeploymentResp": {
+            "type": "object",
+            "required": [
+                "items",
+                "page_num",
+                "page_size",
+                "pages",
+                "total"
+            ],
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v1.DeploymentDetailResp"
+                    }
+                },
+                "page_num": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "page_size": {
+                    "type": "integer",
+                    "example": 10
+                },
+                "pages": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "total": {
+                    "type": "integer",
+                    "example": 100
+                }
+            }
+        },
         "v1.PaginationEnvResp": {
             "type": "object",
             "required": [
@@ -5761,6 +6000,35 @@
                 "description": {
                     "type": "string",
                     "example": "description the cluster"
+                }
+            }
+        },
+        "v1.UpdateDeploymentReq": {
+            "type": "object",
+            "required": [
+                "app_id",
+                "chart_name",
+                "chart_version",
+                "project_env_id"
+            ],
+            "properties": {
+                "app_id": {
+                    "type": "integer"
+                },
+                "chart_name": {
+                    "type": "string",
+                    "example": "senseguard-oauth2"
+                },
+                "chart_version": {
+                    "type": "string",
+                    "example": "1.0.0-dev-000c37"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "description for deployment"
+                },
+                "project_env_id": {
+                    "type": "integer"
                 }
             }
         },
